--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1214,11 +1214,11 @@ input:checked + .toggle-bg {
 .right-0 {
   right: 0px;
 }
+.right-16 {
+  right: 4rem;
+}
 .right-2 {
   right: 0.5rem;
-}
-.right-32 {
-  right: 8rem;
 }
 .right-\[30px\] {
   right: 30px;
@@ -1336,6 +1336,10 @@ input:checked + .toggle-bg {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+.my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 .-ml-1 {
   margin-left: -0.25rem;
@@ -1947,6 +1951,9 @@ input:checked + .toggle-bg {
 .border-8 {
   border-width: 8px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-x-0 {
   border-left-width: 0px;
   border-right-width: 0px;
@@ -2007,6 +2014,14 @@ input:checked + .toggle-bg {
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(240 82 82 / var(--tw-border-opacity));
+}
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 159 110 / var(--tw-border-opacity));
 }
 .bg-\[\#0E2D10\] {
   --tw-bg-opacity: 1;
@@ -2168,13 +2183,13 @@ input:checked + .toggle-bg {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -2187,6 +2202,14 @@ input:checked + .toggle-bg {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
